Improve style a bit

--- a/src/common.css
+++ b/src/common.css
@@ -1,3 +1,11 @@
+input, textarea {
+    background: none;
+    border: 0.1em ridge green;
+    border-radius: 0.2em;
+    margin-bottom: 0.5em;
+    width: 100%;
+}
+
 button {
     background: none;
     border: none;
@@ -11,4 +19,18 @@ button:hover {
 .icon {
     width: 16px;
     height: 16px;
+}
+
+.scroll {
+    margin: 1em 0.5em;
+    padding: 1em 1em;
+    border-radius: 1em;
+    background: #f0fff0;
+}
+
+.scroll-details {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
