--- a/src/manage-style.css
+++ b/src/manage-style.css
@@ -28,7 +28,7 @@ h1 {
 }
 
 .page {
-    background: #f0f8ff;
+    background: #f0f0f0;
     width: 54em;
     border-radius: 2em;
     margin: 1em auto;
