Change bg colors for page and scroll elements

--- a/src/common.css
+++ b/src/common.css
@@ -31,7 +31,7 @@ a {
     margin: 1em 0.5em;
     padding: 1em 1em;
     border-radius: 1em;
-    background: #f0fff0;
+    background: #ffffec;
 }
 
 .scroll-details {
